--- a/index.html
+++ b/index.html
@@ -4,118 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-  /* General page layout */
-body {
-  font-family: Arial, sans-serif;
-  background: #3c3434;
-  color: #dcdcdc;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px;
-}
-
-/* Headings */
-h3,h2,h1 {
-  margin: 10px 0;
-  font-weight: 600;
-}
-
-
-#timer {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #0077cc;
-  margin: 10px 0;
-}
-
-/* Sentence display */
-#sentence {
-  font-size: 1.3rem;
-  margin: 20px 0;
-  padding: 10px 15px;
-  background: #fff;
-  border: 2px solid #ddd;
-  border-radius: 6px;
-  min-height: 50px;
-  width: 80%;
-  max-width: 700px;
-  text-align: left;
-}
-
-/* Correct / Remaining / Error highlighting */
-#sentence span.correct {
-  color: #222;
-  font-weight: bold;
-}
-#sentence span.remaining {
-  color: #aaa;
-}
-#sentence span.error {
-  color: #d9534f;
-  font-weight: bold;
-}
-
-/* Letter count */
-#lcount {
-  margin: 10px 0;
-  font-size: 1rem;
-  color: #c4c4c4;
-}
-
-/* Result text */
-#result {
-  margin: 15px 0;
-  font-size: 1.1rem;
-  color: #c4c4c4;
-}
-
-/* Textarea */
-textarea {
-  width: 80%;
-  max-width: 700px;
-  height: 120px;
-  font-size: 16px;
-  padding: 12px;
-  border: 2px solid #ccc;
-  border-radius: 6px;
-  resize: none;
-  outline: none;
-  transition: border-color 0.3s;
-}
-textarea:focus {
-  border-color: #0077cc;
-  background: #fdfdfd;
-}
-
-/* Shuffle button */
-#shuffle,#reset {
-  margin-top: 15px;
-  padding: 10px 20px;
-  font-size: 1rem;
-
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: background 0.3s;
-}
-#shuffle{
-  background: #0077cc;
-  color: white;
-}
-#reset{
-  background: #c4c4c4;
-  color: rgb(0, 0, 0);
-}
-#shuffle:hover {
-  background: #005fa3;
-}
-#reset:hover {
-  background: #5d5d5d;
-}
-
-  </style>
+    <link rel="stylesheet" href="styles1.css">
 
 </head>
 <body>
