Add language selection dropdown
Added a language selection dropdown to the HTML.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
     <h1>💻✨ Ｔʏᴘᴇ  Ｍᴀᴅɴᴇss ✨💻</h1>
+    <label for="language">Choose a language:</label>
+    <select id="language"></select>
+
     <h2>Countdown Timer</h2>
 
     <h5 id="timer">10</h5>
